# tosic-http

./: Cargo.toml  README.md
benchmarks/actix-web-bench/: Cargo.toml  README.md
benchmarks/actix-web-bench/src/: handlers.rs  main.rs  models.rs
benchmarks/axum-bench/: Cargo.toml  README.md
benchmarks/axum-bench/src/: handlers.rs  main.rs
benchmarks/tosic-http-bench/: Cargo.toml  README.md
benchmarks/tosic-http-bench/src/: handlers.rs  main.rs
examples/: basic.rs  device_id.rs
examples/complete/: Cargo.toml
examples/complete/src/: logger.rs  main.rs
src/: futures.rs  lib.rs  prelude.rs  request.rs  resource.rs  response.rs  state.rs  utils.rs
src/body/: foreign_impls.rs  message_body.rs  mod.rs  none.rs  size.rs
src/error/: foreign_impls.rs  macros.rs  mod.rs  response_error.rs
src/extractors/: data.rs  json.rs  mod.rs  path.rs  query.rs
src/handlers/: mod.rs  not_found.rs  wrapper.rs
src/middleware/: compression.rs  mod.rs
src/request/: mod.rs  test.rs
src/route/: mod.rs  node.rs  path.rs  route.rs  test.rs
src/server/: builder.rs  mod.rs  test.rs
src/services/: mod.rs
src/traits/: from_request.rs  handler.rs  mod.rs  responder.rs
tosic-http-macro/: Cargo.toml
tosic-http-macro/src/: lib.rs  service.rs
