[workspace]
members = [".", "tosic-http-macro"]

[package]
name = "tosic-http"
version = "0.0.0"
authors = ["Emil Schütt <emil.schutt@gmail.com>"]
description = "A basic but powerful HTTP server implementation based on `actix-web`"
keywords = ["http", "async"]
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.3.0"
clap = { version = "4.5.20", features = ["derive"] }
console-subscriber = { version = "0.4.1", optional = true }
flate2 = "1.0.34"
futures = "0.3.31"
http = "1.1.0"
httparse = "1.9.5"
itertools = "0.13.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "2.0.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version =  "0.7.12", features = ["full"] }
tosic-http-macro = { path = "tosic-http-macro" }
tosic-utils = { git = "https://github.com/retrokiller543/tosic-utils.git", features = ["env", "tracing"] }
tower = { version = "0.5.1", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
pin-project-lite = "0.2.15"
mime = "0.3.17"
serde_urlencoded = "0.7.1"

[features]
default = ["log-subscriber", "gzip"]
console-subscriber = ["dep:console-subscriber"]
log-subscriber = ["dep:tracing-subscriber"]
gzip = []
tracing= []
log = []