[package]
name = "tosic-http-macro"
version = "0.0.0"
authors = ["Emil Schütt <emil.schutt@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.87"
darling = "0.20.10"