[package]
name = "tosic-http-macro"
version = "0.0.0"
authors = ["Emil Schütt <emil.schutt@gmail.com>"]
description = "Proc Macros for generating endpoints when using the `tosic-http` crate"
keywords = ["proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.87"
darling = "0.20.10"