[package]
name = "tosic-http-macro"
version = "0.0.1"
authors = ["Emil Schütt <emil.schutt@gmail.com>"]
description = "Proc Macros for generating endpoints when using the `tosic-http` crate"
keywords = ["proc_macro", "procmacro"]
edition = "2021"
license = "MIT"
repository = "https://github.com/retrokiller543/tosic-http"
homepage = "https://github.com/retrokiller543/tosic-http"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.87"
darling = "0.20.10"