[package]
name = "axum-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"          # For the axum example
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
